# adk-project

./: .env.example  .gitignore  AGENT_GUIDE.md  PROJECT_GUIDE.md  README.md  pyproject.toml  requirements.txt  run_assistant_tests.py  run_workbench.bat  run_workbench.py  temp_brief.py  test_results.txt
adk_agents/cam_agent/: agent.py
adk_agents/contracts_agent/: agent.py
adk_agents/orchestrator/: agent.py
adk_agents/pm_agent/: agent.py
adk_agents/rca_agent/: agent.py
adk_agents/rcca_agent/: agent.py
adk_agents/risk_agent/: agent.py
adk_agents/sq_agent/: agent.py
demos/: background.ipynb  demo_runner.py  scenario_1_variance.py  scenario_2_contract_change.py  scenario_3_quality_escape.py
docs/: STREAMLIT_APP_BUILD_INSTRUCTIONS.md
src/: __init__.py
src/agents/: __init__.py  cam_agent.py  contracts_agent.py  pm_agent.py  rca_agent.py  risk_agent.py  sq_agent.py
src/config/: model_config.py
src/contradiction/: __init__.py  detector.py
src/memory/: __init__.py  memory_retrieval.py  memory_store.py
src/mock_data/: __init__.py  contract_data.py  evm_data.py  ims_data.py  program_data.py  risk_data.py  supplier_data.py
src/observability/: __init__.py  logger.py  metrics.py  tracer.py
src/state/: __init__.py  models.py  state_manager.py
src/tools/: __init__.py  analysis_tools.py  artifact_tools.py  data_tools.py  tool_registry.py  (+4 more)
tests/: assistant-tools.py  call-genesis-assistants-example.py  call_genesis_assistants_example_wrapper.py  genesis_prompt_generator.py  test_agents.py  test_assistants.py  test_external_assistant_results.txt  test_external_assistant_tool.py  test_scenarios.py  test_tools.py  test_workflows.py
(+11 files in other folders)
